правки после инициализации

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,27 @@
-$black: #231f20;
-$orange: #f7941f;
+$primary: #172e5e;
+$secondary: #3ab349;
+$hamburger-padding-x: 15px;
+$hamburger-padding-y: 15px;
+$hamburger-layer-width: 25px;
+$hamburger-layer-height: 2px;
+$hamburger-layer-spacing: 6px;
+$hamburger-layer-color: #fff;
+$hamburger-layer-border-radius: 4px;
+$hamburger-hover-opacity: 0.7;
+$hamburger-active-layer-color: $hamburger-layer-color;
+$hamburger-active-hover-opacity: $hamburger-hover-opacity;
+
+$BP-minimum: 320px;
+$BP-tiny: 350px;
+$BP-small: 480px;
+$BP-mobile: 600px;
+$BP-phablet: 770px;
+$BP-tablet: 960px;
+$BP-large: 1024px;
+$BP-page: 1440px;
+
+@mixin hamburgercolor() {
+  $hamburger-layer-color: $secondary;
+}
+
+$max-width: 1400px;
