--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,4 +14,4 @@
 @import 'gallery';
 //@import 'main';
 @import 'footer';
-@import './node_modules/hamburgers/_sass/hamburgers/hamburgers.scss';
+@import './node_modules/hamburgers/_sass/hamburgers/hamburgers.scss'; //подключил его и в настройках захуярил
