--- a/src/templates/blog-rev.html
+++ b/src/templates/blog-rev.html
@@ -1,17 +1,17 @@
-
-<div class="blog">
-    <div class="wrap">
-    <div class="col-6">
-        <div class="blog__item"></div>
-    </div>
-    
+<div class="container">
+    <div class="row">
+        <div class="blog">
+            <div class="col-6">
+                <div class="blog__img">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta, reiciendis repudiandae iste molestiae velit deserunt labore error aspernatur nulla quibusdam excepturi illo sunt quis vitae adipisci, natus quae ea!</div>
+            </div>
+            <div class="col-6">
+                <div class="blog__img">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta, reiciendis repudiandae iste molestiae velit deserunt labore error aspernatur nulla quibusdam excepturi illo sunt quis vitae adipisci, natus quae ea!</div>
+            </div>
+        </div>
     </div>
 </div>
 
-
-
-
-<div class="blog">
+{# <div class="blog">
     <div class="blog__image"><img src="img/blog_rev.jpg"></div>
     <div class="blog__content">
         <div class="blog__date">21.02.2020</div>
@@ -23,4 +23,4 @@
         </div>
     </div>
 
-</div>
+</div> #}
