--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -13,7 +13,7 @@
     document
         .querySelector('body')
         .append(appJs);
-    console.log('Версия приложения : ', getAppVersion());
+    console.log('Версия приложения : ', getAppVersion());//ну вот, не складываю. просто. а зачем их склаывать картинки тоже? ну вообще вся статика должна быть с версией, типа правило хорошего тона
 </script>
 {# 
 <div class="container-fluid">
