--- a/src/sass/_wrap.scss
+++ b/src/sass/_wrap.scss
@@ -1,18 +1,21 @@
-.wrap {
-  width: 100%;
-  display: flex;
-  padding-left: 15px;
-  padding-right: 15px;
-  flex-wrap: wrap;
+// .wrap {
+//   width: 100%;
+//   display: flex;
+//   padding: 0 30px;
+//   flex-wrap: wrap;
+//   max-width: 1400px;
+//   margin: 0 auto;
 
-  @include mq(max $BP-page) {
-  }
-}
+//   @include mq(max $BP-page) {}
+// }
 
 .container {
   max-width: $max-width;
   margin: 0 auto;
   padding: 0 30px;
+
+  @include mq(max $BP-mobile) {
+  }
 }
 
 .row {
@@ -20,12 +23,32 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
+
+  @include mq(max $BP-mobile) {
+  }
 }
 
 .col {
+  box-sizing: border-box;
+  margin: 15px;
 }
 
 .col-6 {
   width: calc(50% - 30px);
-  border: 1px solid red;
+
+  @include mq(max $BP-mobile) {
+    width: calc(100% - 15px);
+  }
+}
+
+.col-4 {
+  width: 25%;
+
+  @include mq(max $BP-mobile) {
+    width: 50%;
+  }
+}
+
+.p-0 {
+  padding: 0;
 }
