--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,11 +5,13 @@
 @import '_responsive';
 @import '_arrow';
 @import '_burger';
+@import 'blog-rev';
 @import '_info';
 @import '_wrap';
 @import 'modals';
 @import 'header';
 @import 'navbar';
+@import 'service';
 @import 'product';
 @import 'gallery';
 //@import 'main';
