--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -13,9 +13,9 @@
     document
         .querySelector('body')
         .append(appJs);
-    console.log('Версия приложения : ', getAppVersion());//ну вот, не складываю. просто. а зачем их склаывать картинки тоже? ну вообще вся статика должна быть с версией, типа правило хорошего тона
+    console.log('Версия приложения : ', getAppVersion()); //ну вот, не складываю. просто. а зачем их склаывать картинки тоже? ну вообще вся статика должна быть с версией, типа правило хорошего тона
 </script>
-{# 
+
 <div class="container-fluid">
     <div class="row">
         <div class="footer-block">
@@ -37,7 +37,7 @@
         </div>
 
     </div>
-</div> #}
+</div>
 <footer>
 
     <div class="footer-wrapper">
