--- a/src/templates/gallery.html
+++ b/src/templates/gallery.html
@@ -1,17 +1,17 @@
 <div class="container-gallery">
     <div class="row" id="tomatosRow">
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/01.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/02.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/03.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/04.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/05.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/06.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/07.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/08.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/09.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/10.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/11.jpg" alt=""></div>
-        <div class="container-gallery__item"><img class="container-gallery__item--img" src="img/12.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/01.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/02.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/03.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/04.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/05.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/06.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/07.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/08.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/09.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/10.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/11.jpg" alt=""></div>
+        <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/12.jpg" alt=""></div>
 
     </div>
 </div>
