--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
             <source src="img/rain.mp4" type="video/mp4">
         </video>
 
-        <div class="wrap header-block__wrap">
+        <div class="header-block__wrap">
             <div class="title header-block__title">
                 <h3>Тепличный комплекс </h3>
                 <h1>Greenhouse-Qaztomat</h1>
@@ -19,7 +19,7 @@
 
         <div class="header-block__bottom">
 
-            <div class="wrap nav__wrap">
+            <div class="container nav__container">
                 <div class="nav__left">
                     <a class="arrow header-block__arrow"  id="scroll" href="#product">↓</a>
                 </div>
