--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -6,27 +6,25 @@
         </span>
     </button>
 
-    <div class="container">
-        <div class="wrap nav__wrap">
-            <div  class="logo nav__left"><img id="logo" src="img/logo.png" alt=""></div>
-            <ul id="menu" class="nav__right " role="navigation">
-                <li class="nav__item">
-                    <a id="scroll" href="#home" class="nav__link">главная</a>
-                </li>
-                <li class="nav__item">
-                    <a id="scroll" href="#about" class="nav__link">О нас</a>
-                </li>
-                <li class="nav__item">
-                    <a id="scroll" href="#product" class="nav__link">новости </a>
-                </li>
-                <li class="nav__item">
-                    <aid="scroll" href="#service" class="nav__link">каталог </aid="scroll">
-                </li>
-                <li class="nav__item">
-                    <a id="scroll" href="#contacs" class="nav__link">контакты</a>
-                </li>
-            </ul>
-        </div>
+    <div class="container nav__container">
+        <div  class="logo nav__left"><img id="logo" src="img/logo.png" alt=""></div>
+        <ul id="menu" class="nav__right " role="navigation">
+            <li class="nav__item">
+                <a id="scroll" href="#home" class="nav__link">главная</a>
+            </li>
+            <li class="nav__item">
+                <a id="scroll" href="#about" class="nav__link">О нас</a>
+            </li>
+            <li class="nav__item">
+                <a id="scroll" href="#product" class="nav__link">новости </a>
+            </li>
+            <li class="nav__item">
+                <aid="scroll" href="#service" class="nav__link">каталог </aid="scroll">
+            </li>
+            <li class="nav__item">
+                <a id="scroll" href="#contacs" class="nav__link">контакты</a>
+            </li>
+        </ul>
     </div>
 
 </nav>
