--- a/src/templates/service.html
+++ b/src/templates/service.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="row">
-        <ul>
-            <li>Принципы интенсивного производства овощей с глубокой автоматизацией процессов выращивания</li>
-            <li>Современная гидропонная система</li>
-            <li>Техническое и агрономическое онлайн-сопровождение через интернет</li>
-            <li>Дополнительное досвечивание в период низкой солнечной активности</li>
-            <li>Система вертикального и горизонтального зашторивания, система полива и рециркуляции воздуха</li>
-            <li>Контроль влажности и температуры путем: - создания водяного тумана с системой высокого давления - эффективной системы отопления</li>
-            <li>Оптимальное планирование внутренней инфраструктуры</li>
-            <li>Организации равномерного капельного полива со сбором и повторным использования воды</li>
-            <li>Техническое и агрономическое онлайн-сопровождение через интернет</li>
+        <ul class="services">
+            <li class "check">Принципы интенсивного производства овощей с глубокой автоматизацией процессов выращивания</li>
+            <li class="check">Современная гидропонная система</li>
+            <li class="check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
+            <li class="check">Дополнительное досвечивание в период низкой солнечной активности</li>
+            <li class="check">Система вертикального и горизонтального зашторивания, система полива и рециркуляции воздуха</li>
+            <li class="check">Контроль влажности и температуры путем: - создания водяного тумана с системой высокого давления - эффективной системы отопления</li>
+            <li class="check">Оптимальное планирование внутренней инфраструктуры</li>
+            <li class="check">Организации равномерного капельного полива со сбором и повторным использования воды</li>
+            <li class="check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
         </ul>
 
     </div>
