--- a/src/templates/blog-rev.html
+++ b/src/templates/blog-rev.html
@@ -1,14 +1,25 @@
 <div class="container">
+
     <div class="row">
-        <div class="blog">
-            <div class="col-6">
-                <div class="blog__img">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta, reiciendis repudiandae iste molestiae velit deserunt labore error aspernatur nulla quibusdam excepturi illo sunt quis vitae adipisci, natus quae ea!</div>
-            </div>
-            <div class="col-6">
-                <div class="blog__img">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta, reiciendis repudiandae iste molestiae velit deserunt labore error aspernatur nulla quibusdam excepturi illo sunt quis vitae adipisci, natus quae ea!</div>
-            </div>
+        <div class="col col-6">
+            <div class="blog__image"><img src="img/blog_rev.jpg"></div>
         </div>
+        <div class="col col-6">
+
+            <div class="blog__content">
+                <div class="blog__date">21.02.2020</div>
+                <div class="blog__title">
+                    <h5>Заголовок новости</h5>
+                </div>
+                <div class="blog__text">
+                    <p>20.11.2019г. Начались работы по постройке третьего модуля тепличного комплекса. Работы ведет генеральный подрядчик ТОО «KBI Energy». Сроки окончания строительства назначены на март 2020 года.</p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
+
 </div>
 
 {# <div class="blog">
