--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,6 +10,7 @@
 @import '_wrap';
 @import 'modals';
 @import 'header';
+@import 'title-page';
 @import 'navbar';
 @import 'service';
 @import 'product';
