--- a/src/templates/blog-rev.html
+++ b/src/templates/blog-rev.html
@@ -1,6 +1,14 @@
 <div class="container">
 
     <div class="row">
+
+        <div class="col col-12">
+            <div class="title-page title-page--news">
+                <span class="title-page__label">Наши</span>
+                <span class="title-page__title">Новости</span>
+            </div>
+        </div>
+
         <div class="col col-6">
             <div class="blog__image"><img src="img/blog_rev.jpg"></div>
         </div>
