--- a/src/templates/gallery.html
+++ b/src/templates/gallery.html
@@ -1,5 +1,17 @@
+<div class="container">
+    <div class="row">
+        <div class="col col-12">
+            <div class="title-page title-page--gal">
+                <span class="title-page__label">Наша</span>
+                <span class="title-page__title">галерея</span>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-gallery">
     <div class="row" id="tomatosRow">
+
         <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/01.jpg" alt=""></div>
         <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/02.jpg" alt=""></div>
         <div class="col-4 container-gallery__item"><img class="container-gallery__item--img" src="img/03.jpg" alt=""></div>
