--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -19,15 +19,16 @@
 
         <div class="header-block__bottom">
 
-            <div class="container nav__container">
-                <div class="nav__left">
-                    <a class="arrow header-block__arrow"  id="scroll" href="#product">↓</a>
-                </div>
-                <div class="nav__right">
+            <div class="container">
+                <div class="nav__wrapper">
+                    <div class="nav__left">
+                        <a class="arrow header-block__arrow"  id="scroll" href="#product">↓</a>
+                    </div>
+                    <div class="nav__right">
                 справки по телефонам: +7(777)666-55-44
             </div>
+                </div>
             </div>
-
         </div>
     </div>
 </div>
