--- a/src/templates/product.html
+++ b/src/templates/product.html
@@ -1,12 +1,22 @@
-{# <div class="container">
-    <div class="wrap">
-        <div class="product-block">
+<div class="container">
+
+    <div class="row">
+        <div class="col col-12">
+            <div class="title-page title-page--product">
+                <span class="title-page__label">Наша</span>
+                <span class="title-page__title">Продукция</span>
+            </div>
+        </div>
+        <div class="col col-6">
             <div class="product-block__item">
                 <div class="product-block__title">Томаты</div>
                 <img src="img/product_item_01.jpg" alt=""></div>
+        </div>
+        <div class="col col-6">
             <div class="product-block__item">
                 <div class="product-block__title">Розы</div>
                 <img src="img/product_item_02.jpg" alt=""></div>
         </div>
+
     </div>
-</div> #}
+</div>
