--- a/src/templates/service.html
+++ b/src/templates/service.html
@@ -1,16 +1,23 @@
 <div class="container">
     <div class="row">
-        <ul class="services">
-            <li class "check">Принципы интенсивного производства овощей с глубокой автоматизацией процессов выращивания</li>
-            <li class="check">Современная гидропонная система</li>
-            <li class="check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
-            <li class="check">Дополнительное досвечивание в период низкой солнечной активности</li>
-            <li class="check">Система вертикального и горизонтального зашторивания, система полива и рециркуляции воздуха</li>
-            <li class="check">Контроль влажности и температуры путем: - создания водяного тумана с системой высокого давления - эффективной системы отопления</li>
-            <li class="check">Оптимальное планирование внутренней инфраструктуры</li>
-            <li class="check">Организации равномерного капельного полива со сбором и повторным использования воды</li>
-            <li class="check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
-        </ul>
-
+        <div class="col col-12">
+            <div class="title-page title-page--service">
+                <span class="title-page__label">Наши</span>
+                <span class="title-page__title">приемущества</span>
+            </div>
+        </div>
+        <div class="col col-12">
+            <ul class="services">
+                <li class="services__check">Принципы интенсивного производства овощей с глубокой автоматизацией процессов выращивания</li>
+                <li class="services__check">Современная гидропонная система</li>
+                <li class="services__check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
+                <li class="services__check">Дополнительное досвечивание в период низкой солнечной активности</li>
+                <li class="services__check">Система вертикального и горизонтального зашторивания, система полива и рециркуляции воздуха</li>
+                <li class="services__check">Контроль влажности и температуры путем: - создания водяного тумана с системой высокого давления - эффективной системы отопления</li>
+                <li class="services__check">Оптимальное планирование внутренней инфраструктуры</li>
+                <li class="services__check">Организации равномерного капельного полива со сбором и повторным использования воды</li>
+                <li class="services__check">Техническое и агрономическое онлайн-сопровождение через интернет</li>
+            </ul>
+        </div>
     </div>
 </div>
