--- a/src/sass/_arrow.scss
+++ b/src/sass/_arrow.scss
@@ -6,4 +6,10 @@
   text-align: center;
   color: #fff;
   display: block;
+  transition: all 0.4s;
+
+  &:hover {
+    text-decoration: none;
+    color: #fff;
+  }
 }
