--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'service';
 @import 'product';
 @import 'gallery';
+@import 'about-us';
 //@import 'main';
 @import 'footer';
 @import './node_modules/hamburgers/_sass/hamburgers/hamburgers.scss'; //подключил его и в настройках захуярил
