--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -22,9 +22,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 0px;
-
     display: flex;
-    width: 100%;
     position: relative;
 
     @include mq(max, $BP-mobile) {
@@ -42,17 +40,14 @@
 
     @include mq(max, $BP-mobile) {
       right: -100vw; //
-      transition: right 3s;
+      transition: right 1s;
       position: absolute;
       width: 0;
     }
 
-    //при клике через джс включаю этот класс, он зависит. Теперь, я хотел что бы при нажатии, выезжал фон ща покажу на другом экране
-    //и типа нехуя чет не получается пиши? я не пойму, ты закоментил дисплой ноне, а куда меню тогда сьебалось. За край экрана его нет)
-    //Я сейчас подайду, отползу за чаем ок ок, а тут тоже аналогично скрол блочить? заебись чо) единственный момент который я вот думаю, ну что бы не ебаться, я типа скачал гамбурегер
     &--visible {
-      background-color: red;
-      width: 100%; //То есть на весь экран шоб была? да. А на хуя тут 150 п ихелей? это я эксперементировал, я то могу на весь экран но мне анимация нужна
+      background-color: $primary;
+      width: 70%;
       position: absolute;
       height: 100vh;
       display: block;
@@ -61,7 +56,7 @@
       right: 0;
       align-items: center;
       justify-content: center;
-      transition: right 3s;
+      transition: right 1s;
     }
   }
 
@@ -83,6 +78,12 @@
     // transition: all 0.2s ease-in-out;
     position: relative;
 
+    @include mq(max, $BP-mobile) {
+      // border-bottom: 1px solid #fff;
+
+      width: 100%;
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -100,6 +101,10 @@
 
     &:last-child {
       border-right: 1px solid rgba(255, 255, 255, 0.17);
+
+      @include mq(max, $BP-mobile) {
+        border-right: none;
+      }
     }
 
     &:hover,
@@ -124,16 +129,20 @@
     color: $primary;
     text-transform: uppercase;
     text-decoration: none;
+
+    @include mq(max, $BP-mobile) {
+      color: #fff;
+    }
   }
 
   .nav__hamburger {
     .hamburger-inner,
     .hamburger-inner::before,
     .hamburger-inner::after {
-      background-color: red;
+      background-color: $primary;
 
       @include mq(max, $BP-mobile) {
-        background-color: red;
+        background-color: $primary;
       }
     }
 
@@ -143,10 +152,10 @@
       .hamburger-inner,
       .hamburger-inner::before,
       .hamburger-inner::after {
-        background-color: red;
+        background-color: $primary;
 
         @include mq(max, $BP-mobile) {
-          background-color: red;
+          background-color: $primary;
         }
       }
     }
@@ -159,4 +168,21 @@
 
 .logo {
   width: 160px;
+}
+
+#shadow {
+}
+
+.shadow-wrapper {
+  background-color: transparent;
+
+  &--active {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.65);
+  }
 }
