--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -24,14 +24,12 @@
 
             </div>
             <div class="footer-block__contact">
-                <div class="footer-block__title">
-                    <h5>контакты</h5>
-                </div>
-                <div class="footer-block__adress">г. Экибастуз Павлодарская область</div>
-                <div class="footer-block__phone">
-                    <p>+7(777)666-55-44</p>
-                    <p>+7(777)666-55-44</p>
-                </div>
+
+                <h3 class="footer-block__title">контакты</h3>
+
+                <p>г. Экибастуз Павлодарская область</p>
+                <p>+7(777)666-55-44</p>
+                <p>+7(777)666-55-44</p>
 
             </div>
         </div>
@@ -40,16 +38,25 @@
 </div>
 <footer>
 
-    <div class="footer-wrapper">
+    <div class="footer-block__bottom">
+        <div class="container">
 
-        <a class="arrow footer-wrapper__arrow" id="scroll" href="#home">↑</a>
+            <div class="footer-block__wrapper">
+                <a class="arrow footer-wrapper__arrow" id="scroll" href="#home">↑</a>
 
-        <div class="footer-wrapper__left">
-            <div class="info">копирайт 2020</div>
+                <div class="footer-wrapper__left">
+                    <div class="info">копирайт 2020</div>
+                </div>
+                <div class="footer-wrapper__right">
+                    <img src="img/facebook.svg" alt="">
+                    <img src="img/instagram.svg" alt="">
+                    <img src="img/linkedin.svg" alt="">
+                </div>
+
+            </div>
+
         </div>
-        <div class="footer-wrapper__right">
-            <div class="info">копирайт 2020</div>
-        </div>
+
     </div>
 
 </footer>
