--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,10 +11,10 @@
                 <h3>Тепличный комплекс </h3>
                 <h1>Greenhouse-Qaztomat</h1>
             </div>
-            <div class="header-block__desc">
-                <p>ТОО «Greenhouse-Qaztomat» является крупнейшим тепличным хозяйством Павлодарской области.
-             Представляет собой современный комплекс, оснащенный новейшим оборудованием и инновационными системами и технологиями в соответствии с европейскими стандартами. Проект реализован в партнерстве с известным мировым производителем Van der Hoeven Greenhousebuilders B.V., Нидерланды, входящим в тройку мировых производителей</p>
-            </div>
+            <p class="header-block__desc">
+            ТОО «Greenhouse-Qaztomat» является крупнейшим тепличным хозяйством Павлодарской области.
+            Представляет собой современный комплекс, оснащенный новейшим оборудованием и инновационными системами и технологиями в соответствии с европейскими стандартами.Проект реализован в партнерстве с известным мировым производителем Van der Hoeven Greenhousebuilders B.V., Нидерланды, входящим в тройку мировых производителей</p>
+
         </div>
 
         <div class="header-block__bottom">
