--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -5,8 +5,6 @@ footer {
 }
 
 .footer-wrapper {
-  display: flex;
-  flex-direction: row;
   color: #fff;
   min-height: 120px;
   width: 100%;
@@ -15,11 +13,15 @@ footer {
   padding: 16px;
 
   &__arrow {
-    background-color: $secondary;
+    background-color: #15c82b;
     margin: 0 auto;
     position: absolute;
     bottom: 70px;
     left: calc(50% - 35px);
+
+    &:hover {
+      background-color: $secondary;
+    }
   }
 
   &__left {
@@ -27,6 +29,26 @@ footer {
 
   &__right {
     margin-left: auto;
+
+    svg {
+      fill: #fff;
+    }
+
+    img {
+      width: 28px;
+      height: 28px;
+      margin: 0 8px;
+
+      @include mq(max $BP-mobile) {
+        width: 24px;
+        height: 24px;
+        margin: 0 5px;
+      }
+
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
   }
 }
 
@@ -36,7 +58,21 @@ footer {
   color: #fff;
 
   &__title {
-    // @extend .blog__title;
+    @extend .blog__title;
+  }
+
+  &__bottom {
+    color: #fff;
+
+    width: 100%;
+    position: relative;
+  }
+
+  &__wrapper {
+    align-items: center;
+    padding: 16px;
+    display: flex;
+    height: 100px;
   }
 
   &__adress {
@@ -56,7 +92,7 @@ footer {
   }
 
   &__contact {
-    background-color: #172e5e;
+    background-color: $secondary;
     position: absolute;
     width: 600px;
     height: 50%;
@@ -67,6 +103,15 @@ footer {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    &:after {
+      content: '';
+      display: block;
+      border: 2px solid #fff;
+      width: calc(100% - 50px);
+      height: calc(100% - 50px);
+      position: absolute;
+    }
 
     @include mq(max $BP-mobile) {
       width: 100%;
